# bazel_deps

./: WORKSPACE.bazel  deps.bzl
misc/: sourceforge_mirrors.bzl
